<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailUserParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:context=".ui.DetailUserActivity">

    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/background_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/background_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Nama" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                tools:text="Username" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                tools:text="@string/my_location" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBackDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_back_button"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />


    <LinearLayout
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bg_view"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository"
                android:textColor="@color/detailText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRepository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                tools:text="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/detailText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                tools:text="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/detailText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/detailText"
                tools:text="12" />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@drawable/background_profile"
        app:tabTextColor="@android:color/white" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs"
        android:background="@color/bg_detail_bottom" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_btn_favorite"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackground"
        android:scaleType="fitXY"
        android:src="@drawable/ic_icons8_favorites"
        android:tint="@color/favorite_button" />
</RelativeLayout>